更正 竞技结果显示

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "game",
 	"libVersion": "2.9.4",
-	"appid": "wx9219baf0f9311e1f",
+	"appid": "wx7492edf3c7421f4b",
 	"projectname": "myminigame",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
